--- a/gb/21/1/26/n12711807.md
+++ b/gb/21/1/26/n12711807.md
@@ -1,16 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aoiepy3717/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aoiepy3717/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aoiepy3717/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aoiepy3717/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aoiepy3717/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aoiepy3717/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aoiepy3717/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aoiepy3717/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【远见快评】中共舞剑意在拜登 习喊话投石问路</h2>
-<a href="https://git.io/Jtcvt"><img width="600" src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/aoiepy3717/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6></h6>
+<a href="https://dhw62qyyxrv4n.cloudfront.net/X2fbjNy2c"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6>中共舞剑意在拜登，习喊话投石问路。（大纪元合成）
+</h6>
 <hr>
-	<p>【大纪元2021年01月26日讯】朋友们好，今天是1月25号星期一，欢迎大家来到<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>，我是唐靖远。</p>
-<p>在过去的这个周末，<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府仍然是全世界的焦点。不过这次与他在入主白宫第一天签发创纪录的17道行政令不同，这次不是因为美国的内政，而是因为美国的外交问题，而且一上来就是最敏感的台海问题。</p>
-<p>这个问题其实从<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>就职当天宣誓的时候就开始了。大家应该还有印象，中共特意挑选了拜登刚刚宣誓完毕的高度敏感时刻，发布了对美国28位前官员的制裁通报。这完全是踩着节奏来泼冷水的。我们对此有过讨论，就是说这个动作表面上是追打川普政府官员，但实际上是对拜登胆色的火力侦察。</p>
+	<p>【大纪元2021年01月26日讯】朋友们好，今天是1月25号星期一，欢迎大家来到<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>，我是唐靖远。</p>
+<p>在过去的这个周末，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府仍然是全世界的焦点。不过这次与他在入主白宫第一天签发创纪录的17道行政令不同，这次不是因为美国的内政，而是因为美国的外交问题，而且一上来就是最敏感的台海问题。</p>
+<p>这个问题其实从<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>就职当天宣誓的时候就开始了。大家应该还有印象，中共特意挑选了拜登刚刚宣誓完毕的高度敏感时刻，发布了对美国28位前官员的制裁通报。这完全是踩着节奏来泼冷水的。我们对此有过讨论，就是说这个动作表面上是追打川普政府官员，但实际上是对拜登胆色的火力侦察。</p>
 <p>拜登政府对此发表了一份也算措辞强硬的回应。但中共的测试并未停止。在这个周末，中共连续发起了前所未有的高强度测试，而且矛头直指台湾，这次拜登的表现明显差强人意，可以说已经让习近平看出了拜登政府的部分底色。</p>
 <p>今天我们就先来和大家讨论这个热点事件。</p>
-<p><center><a src=""></a><a href="https://git.io/Jtcvt"><img width="600" src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/aoiepy3717/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/MqodJeBsRpU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a src=""></a><a href="https://dhw62qyyxrv4n.cloudfront.net/X2fbjNy2c"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/MqodJeBsRpU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>中共军机连续扰台 前所未有</h2>
 <p>前天周六，中共一口气派遣了13架军机闯入台湾西南防空识别区后，在昨天，也就是24号，中共又先后出动15架军机飞入该领空，创下了中共近年军机绕台规模之最。</p>
 <p>值得注意的是，这两轮的军机绕台，不但数量上创下记录，在军机种类上也是前所未有。中共在前天出动的13架军机，包含了8架轰-6K战略轰炸机、4架歼-16战斗机、1架运-8反潜机。而在昨天出动的15架军机中，包括2架苏-30战斗机、4架歼-16重型战斗机、6架歼-10轻型战斗机、2架运-8反潜机、1架运-8侦察机。</p>
@@ -24,8 +25,8 @@
 <p>令人唏嘘的是，拜登的实际表现即便不能说是一个柿子，但的确也比较软。</p>
 <p>美国国务院发言人普莱斯(Ned Price)在周六当天发表声明，声称美方将继续帮助台湾获取足够的自卫能力。他代表即将上任的新国务卿布林肯(Antony Blinken)向北京喊话，要求其停止运用军事、政治、经济手段向台湾施压，并呼吁中方与“台湾民选代表”开展有意义的对话。</p>
 <p>大家看到了吧，这份声明其实就两个关键信息：一个是帮助台湾自卫、呼吁两岸对话。这个信息基本上就是一种例行表态，而且隐隐透出一点置身事外充当和事佬的意味，与蓬佩奥离任前公布的印太战略框架直接承诺保卫“第一岛链国家”有一段明显的距离。</p>
-<h2>对<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>称呼变成“台湾民选代表”</h2>
-<p>第二个信息更关键，是对<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>的称呼变成了“台湾民选代表”。我们简单对比一下去年5月20号，蓬佩奥正式发表祝贺蔡英文就职的声明中使用的是“蔡英文总统”这样的称谓，我们就可以看出，拜登上台还不到一周，其对美台关系的定位已经出现大幅倒退，蔡英文的待遇被明显降级。</p>
+<h2>对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>称呼变成“台湾民选代表”</h2>
+<p>第二个信息更关键，是对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>的称呼变成了“台湾民选代表”。我们简单对比一下去年5月20号，蓬佩奥正式发表祝贺蔡英文就职的声明中使用的是“蔡英文总统”这样的称谓，我们就可以看出，拜登上台还不到一周，其对美台关系的定位已经出现大幅倒退，蔡英文的待遇被明显降级。</p>
 <p>也就是说，这两个信息释放的信号都指向了一个方向：拜登一上来就力图让美台关系重新回归模糊化，甚至比过去奥巴马时期都更模糊，这正是习近平求之不得的。</p>
 <p>拜登没有上台之前，有不少分析认为他将延续川普政府对中共强硬的政策，因为在对中共实施制裁的多项法案中，都在两党议员获得了很高支持度。</p>
 <p>这当然是拜登一个重要的政策基础。不过纵观过去拜登混迹华府四十多年的历史，他嘴上漂亮话一大堆，实际行动很少，这也是不争的事实。所以，在台海这样可能涉及让美国卷入一场大战的问题上，他能够拿出多少实际行动才是最有价值的观察指标。</p>
@@ -76,41 +77,47 @@
 <p>从连续测试到隔空训话，这背后体现出来的，是习近平并未将拜登政府视为一个相同量级的对手，这与他在川普政府时期的表现截然不同，这等于是美中关系发生了重置。</p>
 <p>大家可能都知道一些所谓的精英集团在推动“大重置”的计划，无论这个计划的实质内容是声明，如果我们从一个宏观的角度看，美中关系的重置，都将对这个大重置产生深远的影响。</p>
 <p>好的，今天就讨论到这里，谢谢各位，我们明天再见。</p>
-<p>《<ahref="https://github.com/aoiepy3717/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组#</p>
+<p>《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%BF%9C%E8%A7%81%E5%BF%AB%E8%AF%84.md#1">远见快评</a>》制作组#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12706452.md#1">【远见快评】蓬佩奥暗示参选？拜登施政遭批</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/12/21/n12636624.md#1">【远见快评】纽时紧张？白宫4.5小时讨论什么</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/12/19/n12631243.md#1">【远见快评】美国防部暂停过渡 四方皆惊</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/12/12/n12614539.md#1">【远见快评】中共渗透连爆：瑞士“引狼入室”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751967.md#1">【远见快评】传普京求援遭拒 中俄关系生变？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750483.md#1">【远见快评】上海解封“埋雷”李克强又出狠招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/30/n13748974.md#1">【远见快评】遭10国拒签协议 中共印太战略折戟</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/27/n13747038.md#1">【远见快评】布林肯暗藏机锋 李克强大会不寻常</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li><hr>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aoiepy3717/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aoiepy3717/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/26/n12711807.htm">【远见快评】中共舞剑意在拜登 习喊话投石问路</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/26/n12711807.htm">【远见快评】中共舞剑意在拜登 习喊话投石问路</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aoiepy3717/djy/blob/master/gb/21/1/26/n12711807.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aoiepy3717/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aoiepy3717/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aoiepy3717/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aoiepy3717/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aoiepy3717/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/1/26/n12711807.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
